--- a/css/dev.css
+++ b/css/dev.css
@@ -4,7 +4,12 @@ lines for visulisaichon
 
 */
 
-.wrap{ border: 10px solid #777; }
+body{
+	border: 10px solid #444;
+	background-color: #f6f6f6;
+}
+
+.wrap{ border: 10px solid green;}
 
 h1{box-shadow: 0px 0 0 5px #0009FF inset;}
 h2{box-shadow: 0px 0 0 5px #00EEFF inset;}
@@ -61,7 +66,8 @@ label.tag-1a{}
 .menu-a{}
 
 .area1{border: 10px solid #ddd;}
-.area2{border: 10px solid #34E;}
+.foot1{border: 10px solid #34E;}
+.nav1{border: 10px solid #92d;}
 
 .block1{border: 10px solid #ddd;}
 .block2{border: 10px solid #ddd;}
