--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 /*
 
 #2B294E morado
@@ -14,134 +13,200 @@
 	border:0;
 	/*font-size: 0;*/
 	transition: all 0.3s ease;
-
+	box-sizing: border-box;
 }
 
 body{
-	position: relative;
-	display: block;
-	width: auto;
-	background-color: #ffffff;
+	background-color: #fff;
 	/*font-size: 0;*/
 	font-family: 'Nunito', sans-serif;
 	color: #2B294E;
+	display: block;
+	width: 100%;
+}
+
+body.full{
+	position: absolute;
+	height: 100%;
+}
+
+body.page{
+	position: relative;
+	height: auto;
+}
+
+.wrap{
+	position: relative;
+	display: inline-block;
+	top: 0;
+	left:0;
+	width: 100%;
+	height: 100%;
+	border: 10px solid #000;
+}
+
+.area-a-80{
+	position: relative;
+	display: block;
+	top: 0;
+	left: 0;
+	text-align: center;
+	width: 100%;
+	height: 80%;
+	border: 5px solid #999;
+}
+
+.area-b-90{
+	position: relative;
+	display: block;
+	top: 0;
+	left: 0;
+	text-align: center;
+	width: 100%;
+	height: 90%;
+	border: 5px solid #999;
+}
+
+.area-c{
+	position: relative;
+	display: block;
+	top: 0;
+	left: 0;
+	text-align: center;
+	width: 100%;
+	height: auto;
+	border: 5px solid #999;
+}
+
+.foot-a-20{
+	position: relative;
+	display: block;
+	top: 0;
+	left: 0;
+
+	background-color: #00A5BB;
+	text-align: center;
+	height: 20%;
+	width: 100%;
+	border: 5px solid #ccc;
+}
+
+.foot-b-10{
+	position: relative;
+	display: block;
+	top: 0;
+	left: 0;
+
+	background-color: #00A5BB;
+	text-align: center;
+	height: 10%;
+	width: 100%;
+	border: 5px solid #ccc;
+}
+
+.foot-c{
+	position: relative;
+	display: block;
+	top: 0;
+	left: 0;
+	background-color: #eee;
+	text-align: center;
+	height: 50px;
+	width: 100%;
+	border: 5px solid #ccc;
 }
 
 
-h1{font-size: 40px;}
-h2{font-size: 20px;}
-h3{font-size: 18px;}
-h4{font-size: 16px;}
-h5{font-size: 14px;}
-h6{font-size: 13px;}
 
-p{font-size: 16px;}
+.area-profile{
+	position: relative;
+	display: inline-block;
+	width: 500px;
+	border: 1px solid #000;
+	margin: 50px 100px;
+}
 
 
-a{
+.nav-main{
+	background-color: #f07;
+}
+
+.nav-main ul li{
+	display: inline-block;
+	margin: 5px 15px;
+}
+
+
+
+.profile-infomation,
+.profile-photos,
+.profile-places{
+	position: relative;
+	display: inline-block;
+	width: 500px;
+	margin: 10px auto;
+	padding: 10px 30px;
+	border: 2px solid #2B294E;
+	border-radius: 12px;
+	background-color: #fff;
+}
+
+.profile-photo{}
+.profile-places{}
+
+.profile-infomation img{
+	position: relative;
+	margin-top: -65px;
+	margin-left: -65px;
+	width: 110px;
+	height: 110px;
+	border: 2px solid #2B294E;
+	border-radius: 65px;
+}
+.profile-photos li{
+	position: relative;
+	display: inline-block;
+	height: 90px;
+}
+.profile-photos img{
+	position: relative;
+	display: inline-block;
+	height: 100%;
+	border-radius: 6px;
+}
+.profile-places{}
+.profile-places ul{
+	list-style-position: inside;
 	color: #FA1F6F;
+}
+
+
+
+
+.area-profile-head-image{
+	position: fixed;
+	display: block;
+	width: 750px;
+	height: 100%;
+	border: 1px solid #000;
+	top: 0;
+	margin-left:400px;
+	z-index: -200;
+	overflow: hidden;
+}
+
+.area-profile-head-image img{
+	height:100%;
+	width: 750px;
+	margin-left:-0px;
+}
+
+
+
+.link-a{
 	text-decoration: none;
-}
-
-a:hover{
-}
-
-
-input{
-	cursor: pointer;
-}
-
-.link-1{
-	color: #fff;
-	text-decoration: underline;
-}
-
-.link-1:hover{
 	color: #FA1F6F;
 }
-
-
-hr{
-	height: 1px;
-	background-color: #000;
-	margin: 20px;
-}
-
-
-.btn-1a{
-	position: relative;
-	display: inline-block;
-	width: 110px;
-	text-align: center;
-	padding: 4px 0;
-	font-size: 16px;
-	border-radius: 10px;
-	color: #fff;
-	background-color: #2B294E;
-}
-
-.btn-1a:hover{
-	background-color: #0F0E1E;
-}
-
-.btn-2a{
-	position: relative;
-	display: inline-block;
-	width: 110px;
-	text-align: center;
-	padding: 4px 0;
-	font-size: 16px;
-	border-radius: 10px;
-	color: #fff;
-	background-color: #FF8226;
-}
-
-.btn-2a:hover{
-	background-color: #A95517;
-}
-
-
-.btn-1b{
-	position: relative;
-	display: inline-block;
-	width: 110px;
-	text-align: center;
-	padding: 4px 0;
-	font-size: 16px;
-	border-radius: 10px;
-	color: #2B294E;
-	box-shadow: 0 0 0 2px #2B294E inset;
-}
-
-.btn-1b:hover{
-	color: #0F0E1E;
-	box-shadow: 0 0 0 4px #0F0E1E inset;
-}
-
-
-.btn-go{
-	position: relative;
-	display: inline-block;
-	padding: 20px 24px;
-	text-transform: uppercase;
-	font-size: 16px;
-	border-radius: 10px;
-	color: #fff;
-	background-color: #FA1F6F;
-}
-
-.btn-go:hover{
-	transform: scale(1.1,1.1);
-}
-
-
-
-.logo-v2{
-	background-color: #000;
-}
-
-/* icon base - - - - - */
-
 
 .icon{
 	position: relative;
@@ -152,297 +217,15 @@ hr{
 }
 
 .btn-a{
-	width: 100px;
-	height: 100px;
+	width: 60px;
+	height: 60px;
 }
 
+.btn-place      { background-image: url(../img/elements/icon-menu-a-place.svg);}
+.btn-place:hover{ background-image: url(../img/elements/icon-menu-a-place-hover.svg);}
 
-.btn-b{
-	width: 100px;
-	height: 100px;
-}
+.btn-promo      { background-image: url(../img/elements/icon-menu-a-promo.svg);}
+.btn-promo:hover{ background-image: url(../img/elements/icon-menu-a-promo-hover.svg);}
 
-/* menu a - - - - - */
-
-.btn-place      { background-image: url(../img/element/icon-menu-a-place.svg);}
-.btn-place:hover{ background-image: url(../img/element/icon-menu-a-place-hover.svg);}
-
-.btn-promo      { background-image: url(../img/element/icon-menu-a-promo.svg);}
-.btn-promo:hover{ background-image: url(../img/element/icon-menu-a-promo-hover.svg);}
-
-.btn-profile      { background-image: url(../img/element/icon-menu-a-profile.svg);}
-.btn-profile:hover{ background-image: url(../img/element/icon-menu-a-profile-hover.svg);}
-
-.btn-back2      { background-image: url(../img/element/icon-menu-a-back2.svg);}
-.btn-back2:hover{ background-image: url(../img/element/icon-menu-a-back2-hover.svg);}
-
-.btn-back1{ position: absolute; top: 0; right: 0; }
-.btn-back1      { background-image: url(../img/element/icon-menu-a-back1.svg);}
-.btn-back1:hover{ background-image: url(../img/element/icon-menu-a-back1-hover.svg);}
-
-/* menu b - - - - - */
-
-.btn-walk      { background-image: url(../img/element/icon-menu-b-walk.svg);}
-.btn-walk:hover{ background-image: url(../img/element/icon-menu-b-walk-hover.svg);}
-
-.btn-taxi      { background-image: url(../img/element/icon-menu-b-taxi.svg);}
-.btn-taxi:hover{ background-image: url(../img/element/icon-menu-b-taxi-hover.svg);}
-
-.btn-car      { background-image: url(../img/element/icon-menu-b-car.svg);}
-.btn-car:hover{ background-image: url(../img/element/icon-menu-b-car-hover.svg);}
-
-.btn-bus      { background-image: url(../img/element/icon-menu-b-bus.svg);}
-.btn-bus:hover{ background-image: url(../img/element/icon-menu-b-bus-hover.svg);}
-
-/* menu social - - - - - */
-
-.btn-social{
-	width: 100px;
-	height: 100px;
-}
-
-.btn-twitter      { background-image: url(../img/element/icon-social-twitter.svg);}
-.btn-twitter:hover{ background-image: url(../img/element/icon-social-twitter-hover.svg);}
-
-.btn-instagram      { background-image: url(../img/element/icon-social-instagram.svg);}
-.btn-instagram:hover{ background-image: url(../img/element/icon-social-instagram-hover.svg);}
-
-.btn-facebook      { background-image: url(../img/element/icon-social-facebook.svg);}
-.btn-facebook:hover{ background-image: url(../img/element/icon-social-facebook-hover.svg);}
-
-
-/* menu extras and icons - - - - - */
-
-.btn-news {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100px;
-	height: 100px;
-	background-image: url(../img/element/icon-extra-news.svg);
-}
-
-.btn-news:hover{
-	background-image: url(../img/element/icon-extra-news-hover.svg);
-}
-
-.btn-close{
-	width: 100px;
-	height: 100px;
-	background-image: url(../img/element/icon-extra-close.svg);
-}
-
-.btn-close:hover{
-	background-image: url(../img/element/icon-extra-close-hover.svg);
-}
-
-.icon-star-stroke{
-	width: 100px;
-	height: 100px;
-	background-image: url(../img/element/icon-extra-star-stroke.svg);
-}
-
-.icon-star-fill{
-	width: 100px;
-	height: 100px;
-	background-image: url(../img/element/icon-extra-star-fill.svg);
-}
-
-.icon-search{
-	width: 100px;
-	height: 100px;
-	background-image: url(../img/element/icon-extra-search.svg);
-}
-
-.icon-eye{
-	width: 100px;
-	height: 100px;
-	background-image: url(../img/element/icon-extra-eye.svg);
-}
-
-
-
-
-
-/* - - - - - - - - - - - */
-
-.btn-slide{
-	position: relative;
-	display: inline;
-	width: 20px;
-	height: 20px;
-	margin: 20px;
-}
-
-.btn-twitter      { background-image: url(../img/element/icon-social-twitter.svg);}
-.btn-twitter:hover{ background-image: url(../img/element/icon-social-twitter-hover.svg);}
-
-/* - - - - - - - - - - - */
-
-
-
-img{
-	/*width: 100%;*/
-}
-
-
-
-
-
-
-/*
-	#2B294E morado
-	#FA1F6F magenta
-	#00A5BB cian
-	#FF8226 naranja
-
-*/
-
-.form-1{
-	width: 300px;
-	border: 1px solid #eee;
-	padding: 10px;
-}
-
-
-input.field-1a{
-	margin-bottom: 30px;
-	color: #FA1F6F;
-	border-bottom: 1px solid #2B294E;
-	width: 100%;
-}
-
-input.field-1a::placeholder{
-	color: #FA1F6F;
-	opacity: 0.7;
-}
-
-
-
-
-label.tag-1a{
-	position: relative;
-	display: block;
-}
-
-
-
-
-
-.title-2{
-	color: #00A5BB;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*
-
-#2B294E morado
-#FA1F6F magenta
-#00A5BB cian
-#FF8226 naranja
-
-*/
-
-.wrap{
-	position: relative;
-	display: block;
-}
-
-
-.menu-a{
-}
-
-
-
-
-.area1{
-	position: relative;
-	display: block;
-	padding: 10px 100px;
-	text-align: center;
-	height: 600px;
-	overflow: hidden;
-}
-
-
-.area2{
-	position: relative;
-	display: block;
-	padding: 40px 50px;
-	background-color: #00A5BB;
-	text-align: center;
-}
-
-.block1{
-	display: inline-block;
-	position: relative;
-	vertical-align: middle;
-	margin: 100px 50px 0;
-}
-
-.block2{
-	display: inline-block;
-	position: relative;
-	vertical-align: middle;
-	margin: 100px 50px 0;
-}
-
-.block1 p {
-	max-width: 300px;
-	margin-top: 30px;
-}
-
-
-.block2 .btn-1a {
-	width: 110px;
-	margin: 30px 6px 0;
-}
-
-.block2 .logo-v1{
-	display: block;
-	width: 250px;
-	height: 250px;
-	margin-bottom: 20px;
-	margin-right: 40px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.btn-profile      { background-image: url(../img/elements/icon-menu-a-profile.svg);}
+.btn-profile:hover{ background-image: url(../img/elements/icon-menu-a-profile-hover.svg);}
